--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,9 @@
 		"js": ["content.js"]
 	  }
 	],
+	"background": {
+		"service_worker": "service-worker.js"
+	},
 	"web_accessible_resources": [
 		{
 		  "resources": [ "cat.gif" ],
